--- a/app/src/main/res/layout/activity_form__aluno_.xml
+++ b/app/src/main/res/layout/activity_form__aluno_.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.activity.Form_Aluno_Activity">
+    tools:context=".ui.activity.FormAlunoActivity">
 
         <EditText android:id="@+id/activity_form_aluno_nome"
             android:layout_width="match_parent"
@@ -27,10 +27,5 @@
             android:inputType="textEmailAddress"
             android:layout_height="wrap_content"/>
 
-        <Button android:id="@+id/activity_form_aluno_botao_salvar"
-            android:layout_width="match_parent"
-            android:layout_margin="8dp"
-            android:text="salvar"
-            android:layout_height="wrap_content"/>
 
 </LinearLayout>
